--- a/src/components/BulletCard/bulletcard.styles.css
+++ b/src/components/BulletCard/bulletcard.styles.css
@@ -1,11 +1,13 @@
 .card {
-    background-color: rgb(51, 49, 49);
-    color: white;
+    background-image: url("/cardbackground.webp");
+    background-size: cover;
+    color: rgb(248, 246, 246);
     height: auto;
-    -webkit-text-stroke-width: 0.33px;
-    -webkit-text-stroke-color: black;
-    margin: 10px;
-    
+    text-shadow: rgb(65, 64, 64) 0px 0px 10px;
+    margin: 3px;
+    font-size: 14px;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: rgba(0, 0, 0, 0.425);
 }
 
 .img {
@@ -17,21 +19,25 @@
 }
 
 .armor-value {
-    display: block;
+    display: inline-block;
     text-align: start;
-    border-top: 1px solid #00000067;    
-    width: 100%;
-    box-sizing: border-box;
+    border-top: 1px solid rgb(36, 35, 35);
     margin: 0;
     padding: 0;
   }
 
-
+.effective {
+    margin: 0;
+    padding: 0;
+    display: inline;
+    font-size: large;
+    font-weight: 750;
+    -webkit-text-stroke-color: rgba(0, 0, 0, 0.021);
+}
 
 .list {
     text-align: start;
     list-style-type: none;
-
     width: auto;
     padding-left: 0;
     margin: 2px;
@@ -41,19 +47,30 @@
     padding: 2px;
     align-items: start;
 }
-.card-title {
-    margin-bottom: 5px;
-}
 
-.class {
-    margin-right: 5px;
+.center {
+    text-align: center;
+    font-size: large;
+    font-weight: 999;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: rgba(0, 0, 0, 0.425);
+}
+.card-title {
+    margin: 0;
+    font-weight: 999;
+    font-size: large;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: rgba(0, 0, 0, 0.425);
+
 }
 
 .custom-table {
-    border-top: 1px solid black;
+    border-top: 1px solid rgb(0, 0, 0);   
+    -webkit-text-stroke-color: rgba(0, 0, 0, 0); 
 }
 
 .tablecell { 
-    border: 1px solid rgba(0, 0, 0, 0.452);
+    border: 1px solid rgb(0, 0, 0);
     text-align: center;
 }
+
